--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sergiyiva/translate",
-  "version": "1.1.0",
+  "version": "1.0.12",
   "description": "Translate text to different languages on node.js and the browser",
   "author": "Francisco Presencia <public@francisco.io> (https://francisco.io/)",
   "license": "MIT",
@@ -25,13 +25,8 @@
   "type": "module",
   "main": "index.min.js",
   "types": "index.d.ts",
-  "exports": {
-    "import": "./index.min.js",
-    "require": "./index.min.cjs"
-  },
   "files": [
-    "index.d.ts",
-    "index.min.cjs"
+    "index.d.ts"
   ],
   "devDependencies": {
     "check-dts": "^0.7.1",
